<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sub_color_app"
    android:layoutDirection="rtl"
    android:textDirection="rtl"
    android:focusableInTouchMode="true"
    android:focusable="true"
    tools:context=".activities.AddClassActivity">

    <include
        android:id="@+id/toolbar_add_branch_class"
        layout="@layout/custom_toolbar"/>

    <ScrollView
        android:id="@+id/scroll_content"
        android:layout_below="@id/toolbar_add_branch_class"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >
        <RelativeLayout
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/days_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/days"
                android:textColorHint="@color/black_gray"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:boxStrokeColor="@color/black_gray"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_days"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black_gray"
                    android:drawablePadding="10dp"
                    android:inputType="text"
                    android:drawableEnd="@drawable/ic_baseline_date_24"

                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/timing_layout"
                android:layout_below="@id/days_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/timing"
                android:textColorHint="@color/black_gray"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:boxStrokeColor="@color/black_gray"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_timing"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black_gray"
                    android:drawablePadding="10dp"
                    android:inputType="number"
                    android:drawableEnd="@drawable/ic_baseline_access_time_24"

                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name_class_layout"
                android:layout_below="@id/timing_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/name_class"
                android:textColorHint="@color/black_gray"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:boxStrokeColor="@color/black_gray"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_name_class"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black_gray"
                    android:drawablePadding="10dp"
                    android:inputType="text"
                    android:drawableEnd="@drawable/ic_baseline_class_24"

                    />
            </com.google.android.material.textfield.TextInputLayout>

            <RadioGroup
                android:id="@+id/group_selected"
                android:layout_below="@id/name_class_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_centerInParent="true"
                android:layout_margin="10dp"

                >

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/radio_button_open"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/open"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/black_gray"
                    android:checked="true"
                    android:buttonTint="@color/general_app"
                    />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/radio_button_close"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/close"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/black_gray"
                    android:layout_gravity="end"
                    android:buttonTint="@color/general_app"

                    />
            </RadioGroup>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_button_add_class"
                android:layout_below="@id/group_selected"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="25dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="3dp"
                app:cardBackgroundColor="@color/transparent"
                >

                <com.balysv.materialripple.MaterialRippleLayout
                    style="@style/RippleStyleGrey"
                    android:layout_width="150dp"
                    android:layout_height="50dp">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/button_add_class"
                        android:layout_width="150dp"
                        android:layout_height="50dp"
                        android:background="@drawable/bg_button"
                        android:fontFamily="@font/amaranth"
                        android:text="@string/button_add_class"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </com.balysv.materialripple.MaterialRippleLayout>

            </androidx.cardview.widget.CardView>


        </RelativeLayout>
    </ScrollView>
</RelativeLayout>