<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    android:textDirection="rtl"
    android:background="@color/sub_color_app"
    tools:context=".activities.StudentDetailsActivity">

    <include
        android:id="@+id/toolbar_student_details"
        layout="@layout/custom_toolbar"/>

    <ScrollView
        android:layout_below="@id/toolbar_student_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:focusableInTouchMode="true"
            android:focusable="true"
            >

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name_teacher_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="20dp"
                android:hint="@string/name_teacher"
                android:textColorHint="@color/black_gray"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:boxStrokeColor="@color/black_gray"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_name_teacher"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black_gray"
                    android:drawablePadding="10dp"
                    android:inputType="text"
                    android:drawableEnd="@drawable/ic_baseline_person_24"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/date_enrollment_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/name_teacher_layout"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="20dp"
                android:hint="@string/enrollment_teacher"
                android:textColorHint="@color/black_gray"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:boxStrokeColor="@color/black_gray"
                style="@style/FilledBoxStartIconTintDate"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_enrollment_teacher"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black_gray"
                    android:drawablePadding="10dp"
                    android:inputType="date"
                    android:drawableEnd="@drawable/ic_baseline_date_24"
                    />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/code_teacher_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/date_enrollment_layout"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="20dp"
                android:hint="@string/code_teacher"
                android:textColorHint="@color/black_gray"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:boxStrokeColor="@color/black_gray"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_code_teacher"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black_gray"
                    android:drawablePadding="10dp"
                    android:inputType="text"
                    android:drawableEnd="@drawable/ic_id_card"
                    />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/mobile_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/code_teacher_layout"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="20dp"
                android:hint="@string/mobile_number"
                android:textColorHint="@color/black_gray"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:boxStrokeColor="@color/black_gray"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black_gray"
                    android:drawablePadding="10dp"
                    android:inputType="phone"
                    android:maxLength="11"
                    android:drawableEnd="@drawable/ic_baseline_phone_24"
                    />

            </com.google.android.material.textfield.TextInputLayout>


            <androidx.cardview.widget.CardView
                android:id="@+id/card_button_submit"
                android:layout_below="@id/mobile_layout"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="3dp"
                app:cardBackgroundColor="@color/transparent"
                >
                <com.balysv.materialripple.MaterialRippleLayout
                    style="@style/RippleStyleGrey"
                    android:layout_width="150dp"
                    android:layout_height="50dp">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/button_submit"
                        android:layout_width="150dp"
                        android:layout_height="50dp"
                        android:textColor="@color/white"
                        android:background="@drawable/bg_button"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:text="@string/register_data"
                        />

                </com.balysv.materialripple.MaterialRippleLayout>

            </androidx.cardview.widget.CardView>

        </RelativeLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/linear_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:background="@drawable/bg_progress_bar"
        android:visibility="gone"
        >

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:elevation="5dp"
            android:layout_marginTop="5dp"
            android:progressBackgroundTint="@color/white"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:padding="5dp"
            android:text="@string/loading"
            android:textColor="#CB000000"
            android:textSize="20sp"
            android:textStyle="bold"
            />

    </LinearLayout>

</RelativeLayout>